<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_HV" Id="{fcb19f54-e3e6-4f70-9460-89e7e749c8bc}">
    <Declaration><![CDATA[TYPE ST_HV :
STRUCT
	{attribute 'pytmc' := '
    pv: HV_SW;
	io: io;
    '}
	HV_sw: BOOL:=false;
	{attribute 'pytmc' := '
    pv: HV_DO;
	io: i;
    '}
	q_HV_DO: BOOL;
	{attribute 'pytmc' := '
    pv: ILK_OK;
	io: i;
    '}
	xIlkOK	:	BOOL := FALSE; // Interlock Bit
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>